# skill-repo-rs

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release-rust.yml
src/: cli.rs  config.rs  console_ui.rs  git.rs  interactive.rs  main.rs  metadata.rs  platforms.rs  skills.rs  templates.rs
