[package]
name = "skill-repo"
version = "0.1.0"
edition = "2021"
description = "Skill 仓库 CLI 工具 — 管理和共享 code agent 技能 (Rust 版)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "skill-repo"
path = "src/main.rs"

[dependencies]
# CLI 框架
clap = { version = "4", features = ["derive", "color", "env"] }

# 终端 UI
console = "0.15"          # 终端颜色、样式
dialoguer = { version = "0.11", features = ["fuzzy-select"] }  # 交互式选择
indicatif = "0.17"        # 进度条/spinner

# 序列化
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"        # SKILL.md frontmatter 解析
serde_json = "1"           # manifest.json
toml = "0.8"               # config.toml 读写

# 文件系统 & 路径
dirs = "5"                 # 跨平台 XDG 路径
walkdir = "2"              # 递归目录遍历
fs_extra = "1.3"           # 高级文件复制

# 错误处理
anyhow = "1"               # 简洁的错误处理
thiserror = "2"            # 自定义错误类型

# 其他
regex = "1"
chrono = "0.4"             # 日期处理
sha2 = "0.10"              # SHA256 哈希（缓存路径）
whoami = "1"               # 获取系统用户名
tempfile = "3"             # 临时目录
tar = "0.4"                # tar 解压（git archive）

[profile.release]
opt-level = "z"            # 最小体积
lto = true
strip = true
codegen-units = 1
